--- a/404.html
+++ b/404.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
 </head>
-<body>
-    
-    <img src="./er404.jpg" alt="error404">
+<body class="d-flex align-items-center justify-content-center" style="background-image: url('./fondo.png');">
+        <img class="img-fluid" src="./404.png" alt="error404">
 </body>
 </html>
 
